--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
 <body>
 <div class="container-fluid background-primary">
     <div class="row">
-        <div class="col-2 d-none d-md-block">
-            <ul class="list-unstyled">
-                <li>Connecting Dots</li>
-                <li>What is iPaladin?</li>
-                <li>Protecting Dots</li>
-                <li>Support</li>
-                <li>Blog</li>
-                <li>Contact Us</li>
+        <div class="col-2 text-center full-height d-flex flex-column justify-content-center position-relative">
+            <ul class="list-unstyled negative-mt-first-sidebar">
+                <li class="sidebar-item">Connecting Dots</li>
+                <li class="sidebar-item">What is iPaladin?</li>
+                <li class="sidebar-item">Protecting Dots</li>
+                <li class="sidebar-item">Support</li>
+                <li class="sidebar-item">Blog</li>
+                <li class="sidebar-item">Contact Us</li>
             </ul>
+            <a href="#" class="btn btn-info">SIGN IN</a>
         </div>
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column justify-content-center position-relative">
-            <div class="first-section-info">
+            <div class="negative-mt-first-section">
                 <img class="mb-5" src="http://via.placeholder.com/115x144" alt="iPaladin logo">
                 <h1 class="mb-3">Are you ready?</h1>
                 <p>Launch a revolutionary change that will yield exponential results</p>
                 <p>Digitally transform your office with iPaladin and do more with less effort</p>
                 <a href="#" class="btn btn-info">REQUEST A DEMO</a>
             </div>
-            <img class="hand-image position-absolute" src="hand.png" alt="decorative hand">
         </div>
     </div>
 </div>
