--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <div class="container-fluid background-primary">
     <div class="row">
-        <div class="col-2 text-center full-height d-flex flex-column justify-content-center position-relative">
-            <ul class="list-unstyled negative-mt-first-sidebar">
+        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+            <ul class="list-unstyled mt-first-section">
                 <li class="sidebar-item">Connecting Dots</li>
                 <li class="sidebar-item">What is iPaladin?</li>
                 <li class="sidebar-item">Protecting Dots</li>
@@ -24,8 +24,8 @@
             </ul>
             <a href="#" class="btn btn-info">SIGN IN</a>
         </div>
-        <div class="col-12 col-md-10 text-center full-height d-flex flex-column justify-content-center position-relative">
-            <div class="negative-mt-first-section">
+        <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
                 <img class="mb-5" src="http://via.placeholder.com/115x144" alt="iPaladin logo">
                 <h1 class="mb-3">Are you ready?</h1>
                 <p>Launch a revolutionary change that will yield exponential results</p>
@@ -37,11 +37,122 @@
 </div>
 <div class="container-fluid background-secondary">
     <div class="row">
-        <div class="col-12 full-height">
-            Second
+        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
+                <ul class="list-unstyled">
+                    <li class="sidebar-item">Connecting Dots</li>
+                    <li class="sidebar-item">What is iPaladin?</li>
+                    <li class="sidebar-item">Protecting Dots</li>
+                    <li class="sidebar-item">Support</li>
+                    <li class="sidebar-item">Blog</li>
+                    <li class="sidebar-item">Contact Us</li>
+                </ul>
+                <a href="#" class="btn btn-info">SIGN IN</a>
+            </div>
+        </div>
+        <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <div class="row">
+                    <div class="col-6 px-5">
+                        <h4>You click the keys... iPaladin connects and protects your dots</h4>
+                        <h2>What are dots</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea enim est excepturi magnam provident quidem voluptate voluptates? Ad alias assumenda dolore ducimus earum fugiat hic itaque omnis ut vero!</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea enim est excepturi magnam provident quidem voluptate voluptates? Ad alias assumenda dolore ducimus earum fugiat hic itaque omnis ut vero!</p>
+                    </div>
+                    <div class="col-6 px-5">
+                        <img src="http://via.placeholder.com/323x382" alt="connect the dots image animation">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+<div class="container-fluid background-secondary-darker">
+    <div class="row">
+        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
+                <ul class="list-unstyled">
+                    <li class="sidebar-item">Connecting Dots</li>
+                    <li class="sidebar-item">What is iPaladin?</li>
+                    <li class="sidebar-item">Protecting Dots</li>
+                    <li class="sidebar-item">Support</li>
+                    <li class="sidebar-item">Blog</li>
+                    <li class="sidebar-item">Contact Us</li>
+                </ul>
+                <a href="#" class="btn btn-info">SIGN IN</a>
+            </div>
+        </div>
+        <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-problem" role="tab" aria-controls="pills-problem" aria-selected="true">
+                                    Problem
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-solution" role="tab" aria-controls="pills-solution" aria-selected="false">
+                                    Solution
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-pathway" role="tab" aria-controls="pills-pathway" aria-selected="false">
+                                    Pathway to Change
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="pills-tabContent">
+                            <div class="tab-pane fade show active" id="pills-problem" role="tabpanel" aria-labelledby="pills-problem-tab">
+                                <div class="row">
+                                    <div class="col-6 px-5">
+                                        <p>Problem</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="pills-solution" role="tabpanel" aria-labelledby="pills-solution-tab">
+                                <div class="row">
+                                    <div class="col-6 px-5">
+                                        <p>Solution</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="pills-pathway" role="tabpanel" aria-labelledby="pills-pathway-tab">
+                                <div class="row">
+                                    <div class="col-6 px-5">
+                                        <p>Pathway</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
