--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <title>Hello, world!</title>
 </head>
 <body>
 <div class="container-fluid background-primary">
     <div class="row">
-        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+        <div class="col-md-2 text-center full-height d-flex flex-column position-relative">
             <ul class="list-unstyled mt-first-section">
                 <li class="sidebar-item">Connecting Dots</li>
                 <li class="sidebar-item">What is iPaladin?</li>
@@ -22,7 +23,7 @@
                 <li class="sidebar-item">Blog</li>
                 <li class="sidebar-item">Contact Us</li>
             </ul>
-            <a href="#" class="btn btn-info">SIGN IN</a>
+            <a href="#" class="btn btn-info sign-in">SIGN IN</a>
         </div>
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
             <div class="mt-first-section">
@@ -30,7 +31,7 @@
                 <h1 class="mb-3">Are you ready?</h1>
                 <p>Launch a revolutionary change that will yield exponential results</p>
                 <p>Digitally transform your office with iPaladin and do more with less effort</p>
-                <a href="#" class="btn btn-info">REQUEST A DEMO</a>
+                <a href="#" class="btn btn-info request-demo">REQUEST A DEMO</a>
             </div>
         </div>
     </div>
@@ -48,7 +49,7 @@
                     <li class="sidebar-item">Blog</li>
                     <li class="sidebar-item">Contact Us</li>
                 </ul>
-                <a href="#" class="btn btn-info">SIGN IN</a>
+                <a href="#" class="btn btn-info sign-in inverted">SIGN IN</a>
             </div>
         </div>
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
@@ -68,7 +69,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid background-secondary-darker">
+<div class="container-fluid background-secondary-two">
     <div class="row">
         <div class="col-2 text-center full-height d-flex flex-column position-relative">
             <div class="mt-first-section">
@@ -81,7 +82,7 @@
                     <li class="sidebar-item">Blog</li>
                     <li class="sidebar-item">Contact Us</li>
                 </ul>
-                <a href="#" class="btn btn-info">SIGN IN</a>
+                <a href="#" class="btn btn-info sign-in inverted">SIGN IN</a>
             </div>
         </div>
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
@@ -152,7 +153,155 @@
         </div>
     </div>
 </div>
+<div class="container-fluid background-secondary-three">
+    <div class="row">
+        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
+                <ul class="list-unstyled">
+                    <li class="sidebar-item">Connecting Dots</li>
+                    <li class="sidebar-item">What is iPaladin?</li>
+                    <li class="sidebar-item">Protecting Dots</li>
+                    <li class="sidebar-item">Support</li>
+                    <li class="sidebar-item">Blog</li>
+                    <li class="sidebar-item">Contact Us</li>
+                </ul>
+                <a href="#" class="btn btn-info sign-in inverted">SIGN IN</a>
+            </div>
+        </div>
+        <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <div class="row">
+                    <div class="col-12">
+                        <ul class="nav nav-pills mb-3" id="pills-video-tab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="pills-cybersecurity-tab" data-toggle="pill" href="#pills-problem" role="tab" aria-controls="pills-problem" aria-selected="true">
+                                    Problem
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="pills-dataprivacy-tab" data-toggle="pill" href="#pills-solution" role="tab" aria-controls="pills-solution" aria-selected="false">
+                                    Solution
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="pills-data-ownership-tab" data-toggle="pill" href="#pills-pathway" role="tab" aria-controls="pills-pathway" aria-selected="false">
+                                    Pathway to Change
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="pills-video-tabContent">
+                            <div class="tab-pane fade show active" id="pills-problem" role="tabpanel" aria-labelledby="pills-problem-tab">
+                                <div class="row">
+                                    <div class="col-6 px-5">
+                                        <p>Problem</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="pills-solution" role="tabpanel" aria-labelledby="pills-solution-tab">
+                                <div class="row">
+                                    <div class="col-6 px-5">
+                                        <p>Solution</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="pills-pathway" role="tabpanel" aria-labelledby="pills-pathway-tab">
+                                <div class="row">
+                                    <div class="col-6 px-5">
+                                        <p>Pathway</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
+                                    </div>
+                                    <div class="col-6">
+                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="container-fluid background-primary">
+    <div class="row">
+        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
+                <ul class="list-unstyled">
+                    <li class="sidebar-item">Connecting Dots</li>
+                    <li class="sidebar-item">What is iPaladin?</li>
+                    <li class="sidebar-item">Protecting Dots</li>
+                    <li class="sidebar-item">Support</li>
+                    <li class="sidebar-item">Blog</li>
+                    <li class="sidebar-item">Contact Us</li>
+                </ul>
+                <a href="#" class="btn btn-info sign-in">SIGN IN</a>
+            </div>
+        </div>
+        <div class="col-12 col-md-10 text-left full-height d-flex flex-column position-relative">
+            <div class="mt-first-section">
+                <div class="row">
+                    <div class="col-4 offset-2 px-5">
+                        <h3>Contact Us</h3>
+                        <ul class="list-unstyled">
+                            <li class="contact-item">
+                                <i class="fas fa-mobile"></i>813-616-5950 <br>
+                                813-513-9938
+                            </li>
+                            <li class="contact-item">
+                                <i class="far fa-envelope"></i>info@ipaladin.com <br>
+                                support@ipaladin.com
+                            </li>
+                            <li class="contact-item">
+                                <i class="fas fa-map-marker-alt"></i> iPaladin, LCC <br>
+                                202 South Rome Avenue, Suite 150 <br>
+                                Tampa, Florida 33606
+                            </li>
+                            <li class="contact-item">
+                                <a href="#">SEE US ON THE MAP</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <div class="col-4 px-5">
+                        Request a demo or ask for more information
+                        <form action="">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">Send E-mail</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">Call me back</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control custom-input" id="name" aria-describedby="emailHelp" placeholder="Name">
+                                <input type="email" class="form-control custom-input" id="email" aria-describedby="emailHelp" placeholder="Email">
+                                <input type="email" class="form-control custom-input" id="messgae" aria-describedby="emailHelp" placeholder="Message">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
