--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="row">
         <div class="col-md-2 text-center full-height d-flex flex-column position-relative">
             <ul class="list-unstyled mt-first-section">
-                <li class="sidebar-item">Connecting Dots</li>
+                <li class="sidebar-item">
+                    <a href="#" class="scrollable" data-target="#connecting-dots">Connecting Dots</a>
+                </li>
                 <li class="sidebar-item">What is iPaladin?</li>
                 <li class="sidebar-item">Protecting Dots</li>
                 <li class="sidebar-item">Support</li>
@@ -36,7 +38,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid background-secondary">
+<div class="container-fluid background-secondary" id="connecting-dots">
     <div class="row">
         <div class="col-2 text-center full-height d-flex flex-column position-relative">
             <div class="mt-first-section">
@@ -305,8 +307,12 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
