--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container-fluid background-primary">
     <div class="row">
-        <div class="col-md-2 text-center full-height d-flex flex-column position-relative">
+        <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <ul class="list-unstyled mt-first-section">
                 <li class="sidebar-item">
                     <a href="#" class="scrollable" data-target="#connecting-dots">Connecting Dots</a>
@@ -40,7 +40,7 @@
 </div>
 <div class="container-fluid background-secondary" id="connecting-dots">
     <div class="row">
-        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+        <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <div class="mt-first-section">
                 <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
                 <ul class="list-unstyled">
@@ -63,7 +63,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea enim est excepturi magnam provident quidem voluptate voluptates? Ad alias assumenda dolore ducimus earum fugiat hic itaque omnis ut vero!</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea enim est excepturi magnam provident quidem voluptate voluptates? Ad alias assumenda dolore ducimus earum fugiat hic itaque omnis ut vero!</p>
                     </div>
-                    <div class="col-6 px-5">
+                    <div class="col-6">
                         <img src="http://via.placeholder.com/323x382" alt="connect the dots image animation">
                     </div>
                 </div>
@@ -73,7 +73,7 @@
 </div>
 <div class="container-fluid background-secondary-two">
     <div class="row">
-        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+        <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <div class="mt-first-section">
                 <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
                 <ul class="list-unstyled">
@@ -157,7 +157,7 @@
 </div>
 <div class="container-fluid background-secondary-three">
     <div class="row">
-        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+        <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <div class="mt-first-section">
                 <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
                 <ul class="list-unstyled">
@@ -177,58 +177,40 @@
                     <div class="col-12">
                         <ul class="nav nav-pills mb-3" id="pills-video-tab" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" id="pills-cybersecurity-tab" data-toggle="pill" href="#pills-problem" role="tab" aria-controls="pills-problem" aria-selected="true">
-                                    Problem
+                                <a class="nav-link active" id="pills-cybersecurity-tab" data-toggle="pill" href="#pills-cybersecurit" role="tab" aria-controls="pills-cybersecurit" aria-selected="true">
+                                    Cybersecurity
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="pills-dataprivacy-tab" data-toggle="pill" href="#pills-solution" role="tab" aria-controls="pills-solution" aria-selected="false">
-                                    Solution
+                                <a class="nav-link" id="pills-dataprivacy-tab" data-toggle="pill" href="#pills-dataprivacy" role="tab" aria-controls="pills-dataprivacy" aria-selected="false">
+                                    Data Privacy
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="pills-data-ownership-tab" data-toggle="pill" href="#pills-pathway" role="tab" aria-controls="pills-pathway" aria-selected="false">
-                                    Pathway to Change
+                                <a class="nav-link" id="pills-data-ownership-tab" data-toggle="pill" href="#pills-dataownership" role="tab" aria-controls="pills-dataownership" aria-selected="false">
+                                    Data ownership
                                 </a>
                             </li>
                         </ul>
                         <div class="tab-content" id="pills-video-tabContent">
-                            <div class="tab-pane fade show active" id="pills-problem" role="tabpanel" aria-labelledby="pills-problem-tab">
+                            <div class="tab-pane fade show active" id="pills-cybersecurity" role="tabpanel" aria-labelledby="pills-problem-tab">
                                 <div class="row">
-                                    <div class="col-6 px-5">
-                                        <p>Problem</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                    </div>
-                                    <div class="col-6">
-                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    <div class="col-12">
+                                        <img src="http://via.placeholder.com/871x487" alt="video" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="pills-solution" role="tabpanel" aria-labelledby="pills-solution-tab">
+                            <div class="tab-pane fade" id="pills-dataprivacy" role="tabpanel" aria-labelledby="pills-solution-tab">
                                 <div class="row">
-                                    <div class="col-6 px-5">
-                                        <p>Solution</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                    </div>
-                                    <div class="col-6">
-                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    <div class="col-12">
+                                        <img src="http://via.placeholder.com/871x487" alt="video" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="pills-pathway" role="tabpanel" aria-labelledby="pills-pathway-tab">
+                            <div class="tab-pane fade" id="pills-dataownership" role="tabpanel" aria-labelledby="pills-pathway-tab">
                                 <div class="row">
-                                    <div class="col-6 px-5">
-                                        <p>Pathway</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                    </div>
-                                    <div class="col-6">
-                                        <img src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    <div class="col-12">
+                                        <img src="http://via.placeholder.com/871x487" alt="video" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
@@ -242,7 +224,7 @@
 
 <div class="container-fluid background-primary">
     <div class="row">
-        <div class="col-2 text-center full-height d-flex flex-column position-relative">
+        <div class="d-none col-2 text-center full-height d-md-flex flex-column position-relative">
             <div class="mt-first-section">
                 <img class="logo-blue" src="logo-blue.png" alt="ipaladin-logo">
                 <ul class="list-unstyled">
@@ -259,7 +241,7 @@
         <div class="col-12 col-md-10 text-left full-height d-flex flex-column position-relative">
             <div class="mt-first-section">
                 <div class="row">
-                    <div class="col-4 offset-2 px-5">
+                    <div class="col-12 col-md-4 offset-md-2 px-5">
                         <h3>Contact Us</h3>
                         <ul class="list-unstyled">
                             <li class="contact-item">
@@ -281,7 +263,7 @@
                         </ul>
 
                     </div>
-                    <div class="col-4 px-5">
+                    <div class="col-12 col-md-4 px-5">
                         Request a demo or ask for more information
                         <form action="">
                             <div class="form-check form-check-inline">
@@ -297,6 +279,7 @@
                                 <input type="email" class="form-control custom-input" id="email" aria-describedby="emailHelp" placeholder="Email">
                                 <input type="email" class="form-control custom-input" id="messgae" aria-describedby="emailHelp" placeholder="Message">
                             </div>
+                            <a href="#" class="btn btn-info sign-in">SEND</a>
                         </form>
                     </div>
                 </div>
