--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Hello, world!</title>
 </head>
@@ -31,11 +32,12 @@
         </div>
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
             <div class="mt-first-section">
-                <img class="mb-5" src="http://via.placeholder.com/115x144" alt="iPaladin logo">
-                <h1 class="mb-3">Are you ready?</h1>
-                <p>Launch a revolutionary change that will yield exponential results</p>
-                <p>Digitally transform your office with iPaladin and do more with less effort</p>
-                <a href="#" class="btn btn-info request-demo">REQUEST A DEMO</a>
+                <img class="mb-5" src="./img/logo-iso.png" alt="iPaladin logo">
+                <h1 class="mb-4 main-title">Are you ready?</h1>
+                <p class="mb-0 subhead">Launch a revolutionary change that will yield exponential results</p>
+                <p class="mb-5 subhead">Digitally transform your office with iPaladin and do more with less effort</p>
+                <a href="#" class="btn btn-info request-demo col-12">REQUEST A DEMO</a>
+                <img src="img/hand.png" alt="image of hand" class="my-5 hand">
             </div>
         </div>
     </div>
@@ -59,14 +61,15 @@
         <div class="col-12 col-md-10 text-center full-height d-flex flex-column position-relative">
             <div class="mt-first-section">
                 <div class="row">
-                    <div class="col-6 px-5">
-                        <h4>You click the keys... iPaladin connects and protects your dots</h4>
-                        <h2>What are dots</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea enim est excepturi magnam provident quidem voluptate voluptates? Ad alias assumenda dolore ducimus earum fugiat hic itaque omnis ut vero!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea enim est excepturi magnam provident quidem voluptate voluptates? Ad alias assumenda dolore ducimus earum fugiat hic itaque omnis ut vero!</p>
-                    </div>
-                    <div class="col-6">
-                        <img class="img-fluid" src="http://via.placeholder.com/323x382" alt="connect the dots image animation">
+                    <div class="col-12">
+                        <h2 class="secondary-title">You click the keys... iPaladin connects and protects your dots</h2>
+                        <h2 class="secondary-title mb-5">What are dots?</h2>
+                        <p>
+                            Millions of separate communication threads, individual
+                            documents, isolated actions and decisions. Every daily, offices consistently add a blizzard of new dots to their digital landscape, exacerbating their current information- overload problem. Fused together, these random dots are normally the only recorded evidence  of a business’s intelligence.
+
+                            For the cost of a single human archivist, iPaladin can be implemented as an inerrant,  perpetual solution. It never  requires time off or retires to properly connect and protect your dots.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -96,57 +99,54 @@
                         <ul class="nav nav-pills mb-3 d-flex justify-content-between" id="pills-tab" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-problem" role="tab" aria-controls="pills-problem" aria-selected="true">
-                                    Problem
+                                    <h2 class="section-title">
+                                        Problem
+                                    </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-solution" role="tab" aria-controls="pills-solution" aria-selected="false">
-                                    Solution
+                                    <h2 class="section-title">
+                                        Solution
+                                    </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-pathway" role="tab" aria-controls="pills-pathway" aria-selected="false">
-                                    Pathway to Change
+                                    <h2 class="section-title">
+                                        Pathway to Change
+                                    </h2>
                                 </a>
                             </li>
                         </ul>
                         <div class="tab-content" id="pills-tabContent">
                             <div class="tab-pane fade show active" id="pills-problem" role="tabpanel" aria-labelledby="pills-problem-tab">
                                 <div class="row">
-                                    <div class="col-6 px-5">
-                                        <p>Problem</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                    </div>
-                                    <div class="col-6">
-                                        <img class="img-fluid" src="http://via.placeholder.com/323x382" alt="what is the problem">
+                                    <div class="col-12">
+                                        <p>
+                                            Built from the ground up and subjected to rigorous testing for the past ten years, iPaladin's smart blockchain technology connects the dots.  It weaves together every sliver of communication threads, work items and documents within your office landscape.
+
+                                            iPaladin serves as your advocate - your permanent archivist.
+                                            It provides context to information with landmarks and road signs, exposing currently hidden information, leveraging the time and talents of people around the intelligence of your business.
+
+                                            Once your dots are organized as knowledged, you extract intelligence. How? When you are ready, model a client-focused structure of your business, coordinate the team around required operations and information, assign the work to gain group consensus and get going.  iPaladin eliminates pain points truggered by the needles blocking and tackling that's required to manually reassemble business knowledge.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-solution" role="tabpanel" aria-labelledby="pills-solution-tab">
                                 <div class="row">
-                                    <div class="col-6 px-5">
-                                        <p>Solution</p>
+                                    <div class="col-12">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                    </div>
-                                    <div class="col-6">
-                                        <img class="img-fluid" src="http://via.placeholder.com/323x382" alt="what is the problem">
                                     </div>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-pathway" role="tabpanel" aria-labelledby="pills-pathway-tab">
                                 <div class="row">
-                                    <div class="col-6 px-5">
-                                        <p>Pathway</p>
+                                    <div class="col-12">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae debitis quia tempore ut. Consectetur corporis distinctio, facilis inventore quaerat recusandae. Autem earum incidunt modi, natus non placeat quidem soluta ullam!</p>
-                                    </div>
-                                    <div class="col-6">
-                                        <img class="img-fluid" src="http://via.placeholder.com/323x382" alt="what is the problem">
                                     </div>
                                 </div>
                             </div>
@@ -180,17 +180,23 @@
                         <ul class="nav nav-pills mb-3 d-flex justify-content-between" id="pills-video-tab" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link active" id="pills-cybersecurity-tab" data-toggle="pill" href="#pills-cybersecurit" role="tab" aria-controls="pills-cybersecurit" aria-selected="true">
-                                    Cybersecurity
+                                    <h2 class="section-title">
+                                        Cybersecurity
+                                    </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-dataprivacy-tab" data-toggle="pill" href="#pills-dataprivacy" role="tab" aria-controls="pills-dataprivacy" aria-selected="false">
-                                    Data Privacy
+                                    <h2 class="section-title">
+                                        Data Privacy
+                                    </h2>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="pills-data-ownership-tab" data-toggle="pill" href="#pills-dataownership" role="tab" aria-controls="pills-dataownership" aria-selected="false">
-                                    Data ownership
+                                    <h2 class="section-title">
+                                        Data ownership
+                                    </h2>
                                 </a>
                             </li>
                         </ul>
@@ -198,21 +204,27 @@
                             <div class="tab-pane fade show active" id="pills-cybersecurity" role="tabpanel" aria-labelledby="pills-problem-tab">
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="http://via.placeholder.com/871x487" alt="video" class="img-fluid">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-dataprivacy" role="tabpanel" aria-labelledby="pills-solution-tab">
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="http://via.placeholder.com/871x487" alt="video" class="img-fluid">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-dataownership" role="tabpanel" aria-labelledby="pills-pathway-tab">
                                 <div class="row">
                                     <div class="col-12">
-                                        <img src="http://via.placeholder.com/871x487" alt="video" class="img-fluid">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -243,28 +255,6 @@
         <div class="col-12 col-md-10 text-left full-height d-flex flex-column position-relative">
             <div class="mt-first-section">
                 <div class="row">
-                    <div class="col-12 col-md-4 offset-md-2 px-5">
-                        <h3>Contact Us</h3>
-                        <ul class="list-unstyled">
-                            <li class="contact-item">
-                                <i class="fas fa-mobile"></i>813-616-5950 <br>
-                                813-513-9938
-                            </li>
-                            <li class="contact-item">
-                                <i class="far fa-envelope"></i>info@ipaladin.com <br>
-                                support@ipaladin.com
-                            </li>
-                            <li class="contact-item">
-                                <i class="fas fa-map-marker-alt"></i> iPaladin, LCC <br>
-                                202 South Rome Avenue, Suite 150 <br>
-                                Tampa, Florida 33606
-                            </li>
-                            <li class="contact-item">
-                                <a href="#">SEE US ON THE MAP</a>
-                            </li>
-                        </ul>
-
-                    </div>
                     <div class="col-12 col-md-4 px-5">
                         Request a demo or ask for more information
                         <form action="">
@@ -281,7 +271,7 @@
                                 <input type="email" class="form-control custom-input" id="email" aria-describedby="emailHelp" placeholder="Email">
                                 <input type="email" class="form-control custom-input" id="messgae" aria-describedby="emailHelp" placeholder="Message">
                             </div>
-                            <a href="#" class="btn btn-info sign-in">SEND</a>
+                            <a href="#" class="btn btn-info sign-in col-12">SEND</a>
                         </form>
                     </div>
                 </div>
